Redirect to new domain

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			USA</p>
 
 			<p>
-			[<a href="http://research.microsoft.com/en-us/um/people/samershi/papers/amershi.CV.January.2017.pdf">CV-Jan.2017</a>]  
-			[<a href="http://research.microsoft.com/en-us/um/people/samershi/papers/amershi.ResearchStatement.2012.pdf">Research Statement</a>]
+			[<a href="papers/amershi.CV.January.2017.pdf">CV-Jan.2017</a>]  
+			[<a href="papers/amershi.ResearchStatement.2012.pdf">Research Statement</a>]
 		</div>
 	</div>
 	<div id="primarycontent">
@@ -266,18 +266,6 @@
 
 	</div>
 </div>
-
-
-<!--
-		<div id="menu">
-			<ul>
-				<li class="first"><a href="http://research.microsoft.com/en-us/um/people/samershi/index.html">Home</a></li>
-				<li><a href="http://research.microsoft.com/en-us/um/people/samershi/pubs.html">Publications</a></li>
-				<li><a href="http://research.microsoft.com/en-us/um/people/samershi/papers/AmershiCV_April2016.pdf">CV</a></li>
-<li><a href="http://research.microsoft.com/en-us/um/people/samershi/papers/amershi.ResearchStatement.2012.pdf">Research Statement</a></li>
-			</ul>
-		</div>
--->
 
 
 <script type="text/javascript">
