Minor fixes. Added meta tags.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 <title>Saleema Amershi</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="description" content="Saleema Amershi is a Researcher at Microsoft Research working on making machine learning easier to use." />
+<link rel="canonical" href="http://saleemaamershi.com" />
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
