Updated cv, research statement 2017

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 <title>Saleema Amershi</title>
-<meta name="description" content="Saleema Amershi is a Researcher at Microsoft Research working on making machine learning easier to use." />
+<meta name="description" content="Saleema Amershi is a Researcher at Microsoft Research working on technologies for making people better at building and using machine learning systems." />
 <link rel="canonical" href="http://saleemaamershi.com" />
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -27,8 +27,9 @@
 			USA</p>
 
 			<p>
-			[<a href="papers/amershi.CV.January.2017.pdf">CV-Jan.2017</a>]  
-			[<a href="papers/amershi.ResearchStatement.2012.pdf">Research Statement</a>]
+			[<a href="papers/amershi.CV.April.2017.pdf">CV.April.2017</a>]  
+            [<a href="papers/amershi.research.statement.2017.pdf">Research.Statement.2017</a>]
+			[<a href="papers/amershi.ResearchStatement.2012.pdf">Research.Statement.2012</a>]
 		</div>
 	</div>
 	<div id="primarycontent">
@@ -36,7 +37,7 @@
 			<h3>About Me</h3>
 		</div>
 		<div class="content">
-			<p>I'm a Researcher in the <a href="http://research.microsoft.com/mtg/">Machine Teaching Group</a> at <a href="http://research.microsoft.com">Microsoft Research</a>. "Machine teaching" is machine learning with a focus on increasing user, or "teacher", productivity and effectiveness.</p>
+			<p>I'm a Researcher in the <a href="http://research.microsoft.com/mtg/">Machine Teaching Group</a> at <a href="http://research.microsoft.com">Microsoft Research</a> working on technologies for making people better at building and using machine learning systems.</p>
 			
 			<p>My research lies at the intersection of human-computer interaction and machine learning. In particular, I create tools to support both practitioner and end-user interaction with machine learning systems. Examples include general purpose tools to support data scientists and machine learning experts building reusable predictive models for production use and application specific tools to support the average person interacting with machine learning in their everyday lives (e.g., automation technologies and recommender systems). Throughout my work, I distill guiding principles applicable in a broader context to help provide a foundation for future human-driven machine learning systems.</p>
 			
@@ -59,7 +60,7 @@
                      <tr>
                         <td class="pubnum">[P.27]</td>
                         <td class="pub">
-                            Huang, T. K., Li, L., Vartanian, A., <strong>Amershi, S.</strong>, and Zhu, J. (2016) Active Learning with Oracle Epiphany. To Appear in the Proceedings of Neural Information Processing Systems (NIPS 2016). [<a href="papers/aloe.NIPS.2016.pdf">pdf</a>]
+                            Huang, T. K., Li, L., Vartanian, A., <strong>Amershi, S.</strong>, and Zhu, J. (2016) Active Learning with Oracle Epiphany. In Proceedings of Neural Information Processing Systems (NIPS 2016). [<a href="papers/aloe.NIPS.2016.pdf">pdf</a>]
                         </td>
                     </tr>
                     <tr>
