Add recent papers and update references.

--- a/index.html
+++ b/index.html
@@ -54,10 +54,34 @@
 		<div class="content">
         	<table>
                 <tbody>
+                    <tr>
+                        <td class="pubnum">[P.32]</td>
+                        <td class="pub">
+                            <strong>Amershi, S.</strong>, Weld, D., Vorvoreanu, M., Fourney, A., Nushi, B., Collisson, P., Suh, J., Iqbal, S. T., Bennett, P., Inkpen, K., Teevan, J., Kikin-Gil, R., and Horvitz, E. (2019) Guidelines for Human-AI Interaction. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2019). [<a href="papers/amershi.HAI.Guidelines.CHI.2019.pdf">pdf</a>] 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="pubnum">[P.31]</td>
+                        <td class="pub">
+                            Kocielnik, R., <strong>Amershi, S.</strong>, and Bennett, P. (2019) Will You Accept an Imperfect AI? Exploring Designs for Adjusting End-User Expectations of AI Systems. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2019). [<a href="papers/CHI2019.AI.Expectations.pdf">pdf</a>] 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="pubnum">[P.30]</td>
+                        <td class="pub">
+                            Yang, Q., Cranshaw, J., <strong>Amershi, S.</strong>, Iqbal, S. T., and Teevan, J. (2019) Sketching NLP: A Case Study of Exploring the Right Things to Design with Language Intelligence. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2019). [<a href="papers/CHI2019_sketchingNLP.pdf">pdf</a>] 
+                        </td>
+                    </tr>
 	 				<tr>
+                        <td class="pubnum">[P.29]</td>
+                        <td class="pub">
+                            <strong>Amershi, S.</strong>, Begel, A., Bird, C., DeLine, R., Gall, H., Kamar, E., Nagappan, N., Nushi, B., and ZImmermann, T. (2019) Software Engineering for Machine Learning: A Case Study. To Appear in the Proceedings of the ACM/IEEE International Conference on Software Engineering (ICSE 2019).
+                        </td>
+                    </tr>
+                     <tr>
                         <td class="pubnum">[P.28]</td>
                         <td class="pub">
-                            Chang, J. C., <strong>Amershi, S.</strong>, and Kamar, E. (2017) Revolt: Collaborative Crowdsourcing for Labeling Machine Learning Datasets. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2017).
+                            Chang, J. C., <strong>Amershi, S.</strong>, and Kamar, E. (2017) Revolt: Collaborative Crowdsourcing for Labeling Machine Learning Datasets. In the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2017). [<a href="papers/CHI2017.Revolt.pdf">pdf</a>] 
                         </td>
                     </tr>
                      <tr>
@@ -206,6 +230,10 @@
 				<div class="content">
                     
                     <table><tbody>
+                     <tr>
+                        <td class="pubnum">[W.10]</td>
+                        <td class="pub">Simard, P., <strong>Amershi, S.</strong>, Chickering, M., Pelton, A. E., Ghorashi, S., Meek, C., Ramos, G., Suh, J., Verwey, J., Wang, M., and Wernsing, J. (2017) Machine Teaching: A New Paradigm for Building Machine Learning Systems. arXiv:1707.06742 [cs.LG], Microsoft Research 2017.</td>
+                    </tr>
                      <tr>
                         <td class="pubnum">[W.9]</td>
                         <td class="pub">Simard, P., Chickering, M., Lakshmiratan, A., Garcia Jurado Suarez, C., <strong>Amershi, S.</strong>, Verwey, J., and Suh, J. (2014) ICE: Interactive Classification and Entity Extraction. Neural Information Processing Systems Demonstrations (NIPS 2014).</td>
