--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <tr>
                         <td class="pubnum">[P.31]</td>
                         <td class="pub">
-                            Kocielnik, R., <strong>Amershi, S.</strong>, and Bennett, P. (2019) Will You Accept an Imperfect AI? Exploring Designs for Adjusting End-User Expectations of AI Systems. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2019). [<a href="papers/CHI2019.AI.Expectations.pdf">pdf</a>] 
+                            Kocielnik, R., <strong>Amershi, S.</strong>, and Bennett, P. (2019) Will You Accept an Imperfect AI? Exploring Designs for Adjusting End-User Expectations of AI Systems. To Appear in the Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI 2019). [<a href="papers/chi2019.AI.Expectations.pdf">pdf</a>] 
                         </td>
                     </tr>
                     <tr>
